Final version before lesson 3 in module 2 - all files edited.

--- a/index.html
+++ b/index.html
@@ -23,47 +23,47 @@
     <main>
 
         <section class="main-grid">
-            <div class="code-card">
+            <article class="code-card">
                 <h2 class="card-header">Flexbox Row</h2>
                 <p>Use these three properties to create a Flexbox row layout.</p>
                 <pre>
-                    <code class="code_snippet">.row {
+                    <code class="code-snippet">.row {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
 }</code>
                 </pre>
-            </div>
+            </article>
 
-            <div class="code-card">
+            <article class="code-card">
                 <h2 class="card-header">Flexbox Column</h2>
                 <p>Use this to create a Flexbox column layout.</p>
                 <pre>
-                    <code class="code_snippet">.column {
+                    <code class="code-snippet">.column {
   display: flex;
   flex-direction: column;
 }</code>
                 </pre>
-            </div>
+            </article>
 
-            <div class="code-card">
+            <article class="code-card">
                 <h2 class="card-header">CSS Grid Layout</h2>
                 <p>Build a 12-column layout using CSS Grid.</p>
                 <pre>
-                    <code class="code_snippet">.grid {
+                    <code class="code-snippet">.grid {
   display: grid;
   width: 100%;
   grid-template-columns:
 repeat(12, 1fr);
 }</code>
                 </pre>
-            </div>
+            </article>
 
-            <div class="code-card">
+            <article class="code-card">
                 <h2 class="card-header">Linear Gradients</h2>
                 <p>This will create a background linear gradient from top to bottom.</p>
                 <pre>
-                    <code class="code_snippet">.linear-gradient-background {
+                    <code class="code-snippet">.linear-gradient-background {
     background: linear-
 gradient(
     rgba(232, 102, 236, 0.3) 0%,
@@ -71,40 +71,40 @@ gradient(
     );
 }</code>
                 </pre>
-            </div>
+            </article>
 
-            <div class="code-card">
+            <article class="code-card">
                 <h2 class="card-header">Box Transition Glow</h2>
                 <p>Use transition and box shadows to glow on hover.</p>
                 <pre>
-                    <code class="code_snippet">.code-card .card-header {
+                    <code class="code-snippet">.code-card .card-header {
     border-radius: 8px;
     transition: all 0.5s ease-in-
 out;
 }
 
 .code-card:hover,
-.card-header:hover .card-header {
+.code-card:hover .card-header {
     box-shadow: inset 0px 0px 8px
     rgba(232, 102, 236, 1), 0 0 15px
     rgba(232, 102, 236, 1);
 }</code>
                 </pre>
-            </div>
+            </article>
 
-            <div class="code-card">
+            <article class="code-card">
                 <h2 class="card-header">Overlay Card with Title</h2>
                 <p>Use position properties and negative margins to raise elements higher than their natural starting
                     point.</p>
                 <pre>
 
-                    <code class="code_snippet">.card-header {
+                    <code class="code-snippet">.card-header {
     position: relative;
     margin-top -20px;
 }</code>
                     
                 </pre>
-            </div>
+            </article>
 
         </section>
 
@@ -112,6 +112,7 @@ out;
     <footer>
         <h3>Made with <span class="heart">❤️</span> and CSS</h3>
     </footer>
+  
 </body>
 
 </html>
